added write to database
