# src/models/borrower.ts
@@ -1,4 +1,5 @@
 import * as database from "../database/database.json";
+import fs from "fs/promises";
 
 export type Borrower = {
     id: number;
@@ -12,7 +13,7 @@ export class BorrowerStore {
         try {
             const borrowers = database.library.borrowers as Borrower[];
 
-            return borrowers; 
+            return borrowers;
         } catch (error) {
             throw new Error("Could not fetch borrowers");
         }
@@ -22,7 +23,7 @@ export class BorrowerStore {
         try {
             const borrower = database.library.borrowers.find(borrower => borrower.id == id);
 
-            if(!borrower) {
+            if (!borrower) {
                 throw {};
             }
 
@@ -32,32 +33,40 @@ export class BorrowerStore {
         }
     }
 
-    create(borrower: Borrower): Borrower {
+    async create(borrower: Borrower): Promise<Borrower> {
         try {
             const id = database.library.borrowers.length;
-            const newBorrower: Borrower = {...borrower, id: id};
+            const newBorrower: Borrower = { ...borrower, id: id };
             database.library.borrowers.push(newBorrower);
+
+            await fs.writeFile("./src/database/database.json", JSON.stringify(database));
 
             return newBorrower;
         } catch (error) {
             throw new Error("Could not create borrower");
         }
     }
-    update(id: number, borrower: Borrower): Borrower {
+
+    async update(id: number, borrower: Borrower): Promise<Borrower> {
         try {
             const index = database.library.borrowers.findIndex(borrower => borrower.id == id);
-            const updatedBorrower = {...database.library.borrowers[index], ...borrower};
+            const updatedBorrower = { ...database.library.borrowers[index], ...borrower };
             database.library.borrowers[index] = updatedBorrower;
-            
+
+            await fs.writeFile("./src/database/database.json", JSON.stringify(database));
+
             return updatedBorrower;
         } catch (error) {
             throw new Error("Could not update borrower");
         }
     }
-    delete(id: number): Borrower {
+
+    async delete(id: number): Promise<Borrower> {
         try {
             const index = database.library.borrowers.findIndex(borrower => borrower.id == id);
             const deletedBorrower = database.library.borrowers.splice(index, 1);
+
+            await fs.writeFile("./src/database/database.json", JSON.stringify(database));
 
             return deletedBorrower[0] as Borrower;
         } catch (error) {
