# src/swagger.json
@@ -63,7 +63,7 @@
             }
           },
           "404": {
-            "description":"Not found",
+            "description": "Not found",
             "schema": {
               "type": "string"
             }
@@ -114,7 +114,9 @@
       ],
       "get": {
         "summary": "Get an existing book by ID",
-        "tags": ["Books"],
+        "tags": [
+          "Books"
+        ],
         "responses": {
           "200": {
             "description": "Book is found",
@@ -173,7 +175,7 @@
             }
           },
           "400": {
-            "description":"Bad Request",
+            "description": "Bad Request",
             "schema": {
               "type": "string"
             }
@@ -198,7 +200,7 @@
             }
           },
           "404": {
-            "description":"Not found",
+            "description": "Not found",
             "schema": {
               "type": "string"
             }
@@ -229,7 +231,7 @@
             }
           },
           "400": {
-            "description":"Bad Request",
+            "description": "Bad Request",
             "schema": {
               "type": "string"
             }
@@ -249,7 +251,9 @@
       ],
       "get": {
         "summary": "Get an existing author by ID",
-        "tags": ["Authors"],
+        "tags": [
+          "Authors"
+        ],
         "responses": {
           "200": {
             "description": "Author is found",
@@ -288,7 +292,7 @@
             }
           },
           "400": {
-            "description":"Bad Request",
+            "description": "Bad Request",
             "schema": {
               "type": "string"
             }
@@ -333,7 +337,7 @@
             }
           },
           "404": {
-            "description":"Not found",
+            "description": "Not found",
             "schema": {
               "type": "string"
             }
@@ -364,7 +368,7 @@
             }
           },
           "400": {
-            "description":"Bad Request",
+            "description": "Bad Request",
             "schema": {
               "type": "string"
             }
@@ -384,7 +388,9 @@
       ],
       "get": {
         "summary": "Get an existing borrower by ID",
-        "tags": ["Borrowers"],
+        "tags": [
+          "Borrowers"
+        ],
         "responses": {
           "200": {
             "description": "Borrower is found",
@@ -423,7 +429,7 @@
             }
           },
           "400": {
-            "description":"Bad Request",
+            "description": "Bad Request",
             "schema": {
               "type": "string"
             }
@@ -443,7 +449,7 @@
             }
           },
           "400": {
-            "description":"Bad Request",
+            "description": "Bad Request",
             "schema": {
               "type": "string"
             }
